<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_lighter">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/orderCardLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_4"
            android:elevation="@dimen/space_4"
            app:cardCornerRadius="@dimen/space_4"
            app:cardElevation="@dimen/space_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/productItemConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardView"
                    android:layout_width="65dp"
                    android:layout_height="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <ImageView
                            android:id="@+id/categoryDrugImageView"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:scaleType="centerCrop"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:tint="@color/grey_lighter"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_baseline_payment_24"
                            tools:srcCompat="@drawable/ic_baseline_payment_24" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/orderReferenceTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/_8lso392lldlild39ddl3do34"
                    android:textAlignment="viewStart"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_body_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cardView"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/orderStatusTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/order_status"
                    android:textStyle="bold"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/font_body_size"
                    app:layout_constraintBottom_toTopOf="@+id/orderDateTextView"
                    app:layout_constraintEnd_toStartOf="@+id/orderDeliveryMode"
                    app:layout_constraintStart_toEndOf="@+id/cardView"
                    app:layout_constraintTop_toBottomOf="@+id/orderReferenceTextView" />

                <ImageButton
                    android:id="@+id/addToCartButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:visibility="gone"
                    android:layout_marginBottom="0dp"
                    android:backgroundTint="@color/white"
                    android:tint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/ic_add_to_cart" />


                <TextView
                    android:id="@+id/orderDeliveryMode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:text="@string/payment_method"
                    android:textSize="@dimen/font_body_size"
                    app:layout_constraintEnd_toStartOf="@+id/addToCartButton"
                    app:layout_constraintStart_toEndOf="@+id/orderStatusTextView"
                    app:layout_constraintTop_toBottomOf="@+id/orderReferenceTextView" />

                <TextView
                    android:id="@+id/orderDateTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:maxLines="1"
                    android:text="@string/order_date"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/addToCartButton"
                    app:layout_constraintStart_toEndOf="@+id/cardView"
                    app:layout_constraintTop_toBottomOf="@+id/orderDeliveryMode" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>